--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "composite": true,
+    "composite": true, // 对于引用项目必须设置该属性
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts"] // 说明 tscnofig.node.json 是专门用于 vite.config.ts 这一文件的 TypeScript 配置文件
 }
