--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -8,7 +8,8 @@
     "types/**/*.d.ts",
     "types/**/*.ts",
     ".eslintrc.cjs",
-    "vite.config.ts"
+    "vite.config.ts",
+    "stylelint.config.cjs"
   ],
   "exclude": []
 }
