--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "vue": "^3.2.47"
@@ -22,6 +23,8 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.15.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.2",
     "postcss-html": "^1.5.0",
     "sass": "^1.63.6",
     "stylelint": "^15.9.0",
@@ -33,5 +36,21 @@
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-stylelint": "^4.3.0",
     "vue-tsc": "^1.4.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,vue}": [
+      "eslint"
+    ],
+    "*.{html,vue,css,scss,sass,less,styl,svelte}": [
+      "stylelint"
+    ]
+  },
+  "browserslist": [
+    "last 2 version",
+    "> 1%",
+    "not dead"
+  ],
+  "engines": {
+    "node": "^18"
   }
 }
