--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "preinstall": "only-allow pnpm"
   },
   "dependencies": {
     "vue": "^3.2.47"
@@ -25,6 +26,7 @@
     "eslint-plugin-vue": "^9.15.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
+    "only-allow": "^1.1.1",
     "postcss-html": "^1.5.0",
     "sass": "^1.63.6",
     "stylelint": "^15.9.0",
