--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
     "preinstall": "only-allow pnpm"
   },
   "dependencies": {
-    "vue": "^3.2.47",
+    "pinia": "^2.1.4",
+    "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
-    "@vitejs/plugin-vue": "^4.1.0",
-    "eslint": "^8.0.1",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "eslint": "^8.43.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.15.0",
-    "husky": "^8.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.15.1",
+    "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "only-allow": "^1.1.1",
     "postcss-html": "^1.5.0",
@@ -33,12 +34,12 @@
     "stylelint": "^15.9.0",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard-scss": "^9.0.0",
-    "typescript": "^5.0.2",
+    "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-checker": "^0.6.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-stylelint": "^4.3.0",
-    "vue-tsc": "^1.4.2"
+    "vue-tsc": "^1.8.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,vue}": [
