--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard-scss": "^9.0.0",
     "typescript": "^5.1.3",
+    "unplugin-auto-import": "^0.16.4",
     "vite": "^4.3.9",
+    "vite-auto-import-resolvers": "^3.1.0",
     "vite-plugin-checker": "^0.6.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-stylelint": "^4.3.0",
