--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "preinstall": "only-allow pnpm"
   },
   "dependencies": {
+    "@arco-design/web-vue": "^2.47.1",
+    "@arco-themes/vue-mulinzi": "^0.0.2",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
+    "@arco-plugins/vite-vue": "^1.4.5",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
@@ -36,6 +39,7 @@
     "stylelint-config-standard-scss": "^9.0.0",
     "typescript": "^5.1.3",
     "unplugin-auto-import": "^0.16.4",
+    "unplugin-vue-components": "^0.25.1",
     "vite": "^4.3.9",
     "vite-plugin-checker": "^0.6.1",
     "vite-plugin-eslint": "^1.8.1",
