--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.15.1",
     "husky": "^8.0.3",
+    "less": "^4.1.3",
     "lint-staged": "^13.2.2",
     "only-allow": "^1.1.1",
     "postcss-html": "^1.5.0",
-    "sass": "^1.63.6",
     "stylelint": "^15.9.0",
     "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard-scss": "^9.0.0",
+    "stylelint-config-standard-less": "^1.0.0",
     "typescript": "^5.1.3",
     "unplugin-auto-import": "^0.16.4",
     "unplugin-vue-components": "^0.25.1",
