--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
+    "report": "pnpm build -- report",
     "preview": "vite preview",
     "prepare": "husky install",
     "preinstall": "only-allow pnpm"
@@ -34,6 +35,7 @@
     "lint-staged": "^13.2.2",
     "only-allow": "^1.1.1",
     "postcss-html": "^1.5.0",
+    "rollup-plugin-visualizer": "^5.9.2",
     "stylelint": "^15.9.0",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard-less": "^1.0.0",
