--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "vite-plugin-checker": "^0.6.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-stylelint": "^4.3.0",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.2"
   },
   "lint-staged": {
