--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "unplugin-vue-components": "^0.25.1",
     "vite": "^4.3.9",
     "vite-plugin-checker": "^0.6.1",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-stylelint": "^4.3.0",
     "vite-plugin-svg-icons": "^2.0.1",
