--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "stylelint": "^15.9.0",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard-less": "^1.0.0",
+    "terser": "^5.18.2",
     "typescript": "^5.1.5",
     "unplugin-auto-import": "^0.16.4",
     "unplugin-vue-components": "^0.25.1",
