--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-stylelint": "^4.3.0",
     "vite-plugin-svg-icons": "^2.0.1",
+    "vite-plugin-vue-devtools": "^0.5.0",
     "vue-tsc": "^1.8.2"
   },
   "lint-staged": {
