--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "report": "pnpm build -- report",
-    "preview": "vite preview",
+    "preview": "pnpm build && vite preview",
     "prepare": "husky install",
     "preinstall": "only-allow pnpm"
   },
@@ -47,6 +47,7 @@
     "vite-plugin-checker": "^0.6.1",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-html": "^3.2.0",
     "vite-plugin-stylelint": "^4.3.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^0.5.0",
