--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@arco-design/web-vue": "^2.47.1",
     "@arco-themes/vue-mulinzi": "^0.0.2",
     "pinia": "^2.1.4",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
