--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "preinstall": "only-allow pnpm"
   },
   "dependencies": {
-    "@arco-design/web-vue": "^2.47.1",
+    "@arco-design/web-vue": "^2.48.0",
     "@arco-themes/vue-mulinzi": "^0.0.2",
     "pinia": "^2.1.4",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@arco-plugins/vite-vue": "^1.4.5",
-    "@types/node": "^20.3.2",
+    "@types/node": "^20.4.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitejs/plugin-vue": "^4.2.3",
@@ -35,18 +35,19 @@
     "eslint-plugin-vue": "^9.15.1",
     "husky": "^8.0.3",
     "less": "^4.1.3",
-    "lint-staged": "^13.2.2",
+    "lint-staged": "^13.2.3",
     "only-allow": "^1.1.1",
     "postcss-html": "^1.5.0",
     "rollup-plugin-visualizer": "^5.9.2",
-    "stylelint": "^15.9.0",
-    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint": "^15.10.1",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-standard-less": "^1.0.0",
-    "terser": "^5.18.2",
-    "typescript": "^5.1.5",
-    "unplugin-auto-import": "^0.16.4",
+    "terser": "^5.19.0",
+    "typescript": "^5.1.6",
+    "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.1",
-    "vite": "^4.3.9",
+    "vite": "^4.4.3",
     "vite-plugin-checker": "^0.6.1",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-eslint": "^1.8.1",
@@ -54,8 +55,8 @@
     "vite-plugin-inspect": "^0.7.32",
     "vite-plugin-stylelint": "^4.3.0",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "^0.5.0",
-    "vue-tsc": "^1.8.2"
+    "vite-plugin-vue-devtools": "^0.5.1",
+    "vue-tsc": "^1.8.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,vue,cjs,cts,mjs,mts}": [
