修改临时缓存文件的位置

--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.stylelintcache
-stats.html
 types/auto-imports.d.ts
 types/components.d.ts
-.eslintrc-auto-import.json
-/.vite-inspect
+.cache
