--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "lint-staged": "^13.2.3",
     "only-allow": "^1.1.1",
     "postcss-html": "^1.5.0",
+    "postcss-less": "^6.0.0",
     "rollup-plugin-visualizer": "^5.9.2",
     "stylelint": "^15.10.1",
-    "stylelint-config-html": "^1.1.0",
     "stylelint-config-recess-order": "^4.3.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-less": "^1.0.0",
     "terser": "^5.19.0",
     "typescript": "^5.1.6",
