--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.15.1",
+    "fast-glob": "^3.3.0",
     "husky": "^8.0.3",
     "less": "^4.1.3",
     "lint-staged": "^13.2.3",
