--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@arco-design/web-vue": "^2.48.0",
     "@arco-themes/vue-mulinzi": "^0.0.2",
+    "@vueuse/core": "^10.2.1",
     "pinia": "^2.1.4",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.3.4",
