查看真实的代理请求地址

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
     "mulinzi",
     "persistedstate",
     "preinstall",
+    "Proxyurl",
+    "qczn",
     "qingcongkeji",
     "sider",
     "stylelintcache",
