--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pinia": "^2.1.4",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vuetify": "^3.3.9"
   },
   "devDependencies": {
     "@arco-plugins/vite-vue": "^1.4.5",
@@ -42,6 +43,7 @@
     "postcss-html": "^1.5.0",
     "postcss-less": "^6.0.0",
     "rollup-plugin-visualizer": "^5.9.2",
+    "sass": "^1.64.1",
     "stylelint": "^15.10.2",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-recommended-vue": "^1.5.0",
@@ -59,6 +61,7 @@
     "vite-plugin-stylelint": "^4.3.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^0.5.1",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue-tsc": "^1.7.0"
   },
   "lint-staged": {
