--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-config-standard-with-typescript": "^36.1.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.15.1",
     "fast-glob": "^3.3.0",
@@ -44,6 +46,7 @@
     "only-allow": "^1.1.1",
     "postcss-html": "^1.5.0",
     "postcss-less": "^6.0.0",
+    "prettier": "^3.0.1",
     "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.64.1",
     "stylelint": "^15.10.2",
