--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,7 @@
     "target": "ES2020", // 最新es6
     "useDefineForClassFields": true, // 使用 Object.defineProperty 定义 class 中的属性，而非使用 obj.key = value 的形式定义属性
     "module": "ESNext",
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
-    ], // 引入 ES 最新特性和 DOM 接口的类型定义
+    "lib": ["ES2020", "DOM", "DOM.Iterable"], // 引入 ES 最新特性和 DOM 接口的类型定义
     "skipLibCheck": true, // 跳过对 .d.ts 文件的类型检查
     /* Bundler mode */
     "moduleResolution": "bundler", // 模块解析策略
@@ -28,17 +24,11 @@
     "incremental": true, //增量编译
     "esModuleInterop": true, //允许使用es6的模块化语法,引入非ES模块
     "tsBuildInfoFile": ".cache/tsBuildInfo",
-    "types": [
-      "vite/client"
-    ], // /// <reference types="vite/client" />
+    "types": ["vite/client"], // /// <reference types="vite/client" />
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "img/*": [
-        "src/assets/images/*"
-      ]
+      "@/*": ["src/*"],
+      "img/*": ["src/assets/images/*"]
     }
   },
   "include": [
@@ -49,11 +39,7 @@
     "types/**/*.d.ts",
     "types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/*.js"
-  ],
+  "exclude": ["node_modules", "dist", "**/*.js"],
   "references": [
     {
       "path": "./tsconfig.node.json"
