--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
-    "vuetify": "^3.3.9"
+    "vuetify": "^3.3.9",
+    "vxe-table": "^4.4.7",
+    "xe-utils": "^3.5.11"
   },
   "devDependencies": {
     "@arco-plugins/vite-vue": "^1.4.5",
@@ -62,6 +64,7 @@
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-inspect": "^0.7.33",
+    "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-stylelint": "^4.3.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^0.5.1",
