--- a/package.json
+++ b/package.json
@@ -13,62 +13,62 @@
     "preinstall": "only-allow pnpm"
   },
   "dependencies": {
-    "@arco-design/web-vue": "^2.48.1",
+    "@arco-design/web-vue": "^2.50.2",
     "@arco-themes/vue-qingcongkeji": "^0.0.2",
-    "@vueuse/core": "^10.2.1",
+    "@vueuse/core": "^10.4.0",
     "md5": "^2.3.0",
-    "pinia": "^2.1.4",
-    "pinia-plugin-persistedstate": "^3.1.0",
+    "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
-    "vuetify": "^3.3.9",
-    "vxe-table": "^4.5.3",
+    "vuetify": "^3.3.14",
+    "vxe-table": "^4.5.6",
     "xe-utils": "^3.5.12"
   },
   "devDependencies": {
     "@arco-plugins/vite-vue": "^1.4.5",
     "@mdi/font": "^7.2.96",
-    "@types/node": "^20.4.2",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@types/node": "^20.5.6",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "@vitejs/plugin-vue": "^4.3.3",
     "cross-env": "^7.0.3",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-config-standard-with-typescript": "^36.1.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^16.0.1",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard-with-typescript": "^39.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.0.2",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vue": "^9.15.1",
-    "fast-glob": "^3.3.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "fast-glob": "^3.3.1",
     "husky": "^8.0.3",
-    "less": "^4.1.3",
-    "lint-staged": "^13.2.3",
+    "less": "^4.2.0",
+    "lint-staged": "^14.0.1",
     "only-allow": "^1.1.1",
     "postcss-html": "^1.5.0",
-    "prettier": "^3.0.1",
+    "prettier": "^3.0.2",
     "rollup-plugin-visualizer": "^5.9.2",
-    "sass": "^1.64.1",
-    "stylelint": "^15.10.2",
+    "sass": "^1.66.1",
+    "stylelint": "^15.10.3",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^10.0.0",
-    "terser": "^5.19.1",
-    "typescript": "^5.1.6",
+    "terser": "^5.19.2",
+    "typescript": "5.0.1-rc",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.1",
-    "vite": "^4.4.5",
-    "vite-plugin-checker": "^0.6.1",
+    "vite": "^4.4.9",
+    "vite-plugin-checker": "^0.6.2",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-html": "^3.2.0",
-    "vite-plugin-inspect": "^0.7.33",
-    "vite-plugin-stylelint": "^4.3.0",
+    "vite-plugin-inspect": "^0.7.38",
+    "vite-plugin-stylelint": "^5.1.1",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "^0.5.1",
+    "vite-plugin-vue-devtools": "1.0.0-rc.2",
     "vite-plugin-vuetify": "^1.0.2",
-    "vue-tsc": "^1.7.0"
+    "vue-tsc": "^1.8.8"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,vue,cjs,cts,mjs,mts}": [
