--- a/package.json
+++ b/package.json
@@ -55,11 +55,10 @@
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^10.0.0",
     "terser": "^5.19.2",
-    "typescript": "5.0.1-rc",
+    "typescript": "5.0.2",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.1",
     "vite": "^4.4.9",
-    "vite-plugin-checker": "^0.6.2",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-html": "^3.2.0",
