--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@arco-design/web-vue": "^2.50.2",
     "@arco-themes/vue-qingcongkeji": "^0.0.2",
     "@vueuse/core": "^10.4.0",
+    "lodash-es": "^4.17.21",
     "md5": "^2.3.0",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@arco-plugins/vite-vue": "^1.4.5",
     "@mdi/font": "^7.2.96",
+    "@types/lodash-es": "^4.17.9",
     "@types/node": "^20.5.6",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
