--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "vite-vue-ts",
+  "name": "saas-boot-vue",
+  "description": "擎峰资产处置平台",
   "private": true,
   "version": "0.0.0",
   "type": "module",
