--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,5 +7,9 @@
     "allowSyntheticDefaultImports": true,
     "allowImportingTsExtensions": true
   },
-  "include": ["build/**/*.ts", "vite.config.ts"] // 说明 tscnofig.node.json 是专门用于 vite.config.ts 这一文件的 TypeScript 配置文件
+  "include": [
+    "build/**/*.ts",
+    "vite.config.ts",
+    "package.json"
+  ] // 说明 tscnofig.node.json 是专门用于 vite.config.ts 这一文件的 TypeScript 配置文件
 }
